--- a/styles/influencer.css
+++ b/styles/influencer.css
@@ -7,6 +7,14 @@
 :root{
     --primary-color:#E02C6D;
 }
+/* share style  */
+.btn-primary{
+    border-radius: 41px;
+    background: var(--primary-color);
+    padding: 10px 24px;
+    color: #fff;
+    border: none;
+}
 /* header section style start here  */
 /* nav section  */
 header{
@@ -29,3 +37,37 @@ nav{
  li{
     margin-left: 34px;
 }
+/* nav section end  */
+ /* hero secton start  */
+ .hero{
+     display: flex;
+     align-items: center;
+     /* justify-content: space-between; */
+     gap: 0px 180px;
+     margin: 0px 120px;
+
+ }
+ .hero-title{
+    color: #3A3A3A;
+    font-size: 3.2rem;
+    font-weight: 700;
+    line-height: 70px; /* 134.615% */
+ }
+ .hero-description{
+    color: #3A3A3A;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 16px 0px;
+ }
+
+ .hero-img{
+     background: url('../images/Circle\ design.svg');
+     background-size: 475px;
+     background-position: center;
+     background-repeat: no-repeat;
+     padding: 30px 33px 31px 1px;
+
+ }
+ .camera{
+     width: 440px;
+ }
