--- a/styles/influencer.css
+++ b/styles/influencer.css
@@ -179,6 +179,25 @@ nav{
     border-radius: 5px;
     
 }
+/* 
+footer section start here
+ */
+ footer{
+     background-color: #0A0826;
+     color: #fff;
+     height: 250px;
+     padding: 50px 0px;
+     text-align: center;
+
+ }
+ .fa-brands{
+     color: #fff;
+     margin: 10px 10px ;
+     background-color: rgba(185, 185, 198, 0.1);
+     padding: 10px;
+     border-radius: 10px;
+     font-size: 1.5rem;
+ }
 
 
 
